==> AmbiqAI/neuralSPOT/extern/AmbiqSuite/R5.2.0/src/usb/dcd_apollo5.c <==
#include "tusb_option.h"
#include "device/dcd.h"
#include "am_mcu_apollo.h"
#include "am_util_delay.h"
#include "am_bsp.h"         // Declare BSP functions am_bsp_external_vddusb33_switch() and am_bsp_external_vddusb0p9_switch()

void
dcd_init (uint8_t rhport)
{
#if defined(AM_PART_APOLLO5A)
    //
    // Enable HFRC ADJ
    //
    uint32_t       ui32Regval =
                    _VAL2FLD(CLKGEN_HFADJ_HFADJMAXDELTA, CLKGEN_HFADJ_HFADJMAXDELTA_DISABLED) |
                    _VAL2FLD(CLKGEN_HFADJ_HFADJGAIN, CLKGEN_HFADJ_HFADJGAIN_Gain_of_1_in_2) |
                    _VAL2FLD(CLKGEN_HFADJ_HFWARMUP, CLKGEN_HFADJ_HFWARMUP_1SEC)             |
                    _VAL2FLD(CLKGEN_HFADJ_HFXTADJ, 0x5B8)                                   |
                    _VAL2FLD(CLKGEN_HFADJ_HFADJCK, CLKGEN_HFADJ_HFADJCK_4SEC)               |
                    _VAL2FLD(CLKGEN_HFADJ_HFADJEN, CLKGEN_HFADJ_HFADJEN_EN);

    am_hal_clkgen_control(AM_HAL_CLKGEN_CONTROL_HFADJ_ENABLE, &ui32Regval);

    //
    // Delay 10ms for HFRC ADJ to complete.
    //
    am_util_delay_ms(10);
#endif

    //
    // Powerup Sequence
    // see Apollo4 Errata ERR041: Induced D+ output pulse may cause
    // unintended disconnect.
    //

    uint32_t initStat = am_hal_usb_initialize(0, (void *) &pUSBHandle);
    if (initStat != AM_HAL_STATUS_SUCCESS) return;

    //
    // Register the callback functions
    //
    am_hal_usb_register_dev_evt_callback(pUSBHandle, dcd_usb_dev_evt_callback);
    am_hal_usb_register_ep0_setup_received_callback(pUSBHandle, dcd_usb_ep0_setup_callback);
    am_hal_usb_register_ep_xfer_complete_callback(pUSBHandle, dcd_usb_ep_xfer_complete_callback);


#if defined (AM_PART_APOLLO5B)
#if defined (AM_CFG_USB_DMA_MODE_0)
  am_hal_usb_set_xfer_mode(pUSBHandle, AM_HAL_USB_OUT_DMA_MODE_0);
  am_hal_usb_set_xfer_mode(pUSBHandle, AM_HAL_USB_IN_DMA_MODE_0);
#elif defined (AM_CFG_USB_DMA_MODE_1)
  am_hal_usb_set_xfer_mode(pUSBHandle, AM_HAL_USB_OUT_DMA_MODE_1);
  am_hal_usb_set_xfer_mode(pUSBHandle, AM_HAL_USB_IN_DMA_MODE_1);
#endif
#endif

#if defined(AM_PART_APOLLO5B)
   dcd_ep_dbuf_configure();
#endif

    dcd_power_up(rhport);
    dcd_connect(rhport);
}

void
dcd_int_enable(uint8_t rhport)
{
  (void) rhport;
  NVIC_SetPriority(USB0_IRQn, AM_IRQ_PRIORITY_DEFAULT);
  NVIC_EnableIRQ(USB0_IRQn);
}

void
dcd_int_disable(uint8_t rhport)
{
  (void) rhport;
  NVIC_DisableIRQ(USB0_IRQn);
}

void
dcd_set_address (uint8_t rhport, uint8_t dev_addr)
{
  // Response with status first before changing device address
  dcd_edpt_xfer(rhport, tu_edpt_addr(0, TUSB_DIR_IN), NULL, 0);
  am_hal_usb_set_addr(pUSBHandle, dev_addr);
  am_hal_usb_set_dev_state(pUSBHandle, AM_HAL_USB_DEV_STATE_ADDRESSED);
}

void
dcd_remote_wakeup(uint8_t rhport)
{
  (void) rhport;
  am_hal_usb_start_remote_wakeup(pUSBHandle);
}

bool
dcd_edpt_open (uint8_t rhport, tusb_desc_endpoint_t const * desc_edpt)
{
  (void) rhport;

  return am_hal_usb_ep_init((void *)pUSBHandle,
                            desc_edpt->bEndpointAddress,
                            (uint8_t)(desc_edpt->bmAttributes.xfer),
                            (uint16_t)(desc_edpt->wMaxPacketSize)) == AM_HAL_STATUS_SUCCESS;
}

void
dcd_edpt_stall (uint8_t rhport, uint8_t ep_addr)
{
  (void) rhport;

  am_hal_usb_ep_stall(pUSBHandle, ep_addr);
}

void
dcd_edpt_clear_stall (uint8_t rhport, uint8_t ep_addr)
{
  am_hal_usb_ep_clear_stall(pUSBHandle, ep_addr);
}

void dcd_sof_enable(uint8_t rhport, bool en)
{
    (void) rhport;

    if(en)
    {
        am_hal_usb_enable_sof_intr(pUSBHandle);
    }
    else
    {
        am_hal_usb_disable_sof_intr(pUSBHandle);
    }
}

void
dcd_connect(uint8_t rhport)
{
    (void) rhport;
    am_hal_usb_attach(pUSBHandle);
}

TU_ATTR_USED  void
dcd_disconnect(uint8_t rhport)
{
    (void) rhport;
    am_hal_usb_detach(pUSBHandle);
#ifdef CFG_TUD_SPEED_HS2FS_CONVER
    dcd_event_bus_signal(0, DCD_EVENT_UNPLUGGED, false);
#endif
}
